Fix paste button alignment

--- a/styles/scss/_copy-paste.scss
+++ b/styles/scss/_copy-paste.scss
@@ -69,8 +69,8 @@
   background: transparent;
   line-height: 1;
   height: auto;
-  margin-top: 0.5em;
-  margin-right: 0.5em;
+  margin-top: 0.675em;
+  margin-right: 0.675em;
 
   &:hover {
     background: #4b5460;
